Finalize test suite
* bench/dynchk/Makefile.am: remove fairness
* bench/dynchk/README: minor changes
* bench/dynchk/models/cl3serv1.pml: add AP
* bench/dynchk/models/cl3serv1.test_suite: formula to check
* bench/dynchk/models/cl3serv3.pml: add AP
* bench/dynchk/models/cl3serv3.test_suite: formula to check

--- a/bench/dynchk/README
+++ b/bench/dynchk/README
@@ -31,7 +31,8 @@ the measures for dynamic algorithms
 
 * dynchk.cc
 
-    The tool used to perform benchs 
+    The tool used to perform benchs. 
+    It can be used to run a simple bench using ./dynchk model file|formula
 
 * generator.sh
 
