add af option to ltl2tgba
* src/tgbaalgos/rebuild.hh: add default strategy
* src/tgbatest/ltl2tgba.cc (main): Fix changes for rebuild over
  ltl2tgba
* src/tgbatest/ltl2tgba.test: fix test

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2012-01-11  Etienne Renault  <renault@lrde.epita.fr>
 
+	* src/tgbatest/ltl2tgba.cc (main): Fix changes for rebuild over
+	ltl2tgba
+
 	* src/tgbatest/randtgba.cc (main): opt_apf is re-available, fix
 	the leak, option apf and af are now exclusives
 
