add bench and tinychecker
Add a benchmarck for spin and a
tlchecker in construction

* README: readme
* bench/Makefile.am: makefile
* configure.ac: update configure
* iface/Makefile.am: update makefile
* iface/tlcheck/Makefile.am: update Makefile
* iface/tlcheck/README: readme
* iface/tlcheck/allbenchs.txt: sumpup
* iface/tlcheck/tlcheck: bin
* iface/tlcheck/tlcheck.cc: checker
*  bench/spin-decomp/Makefile.am: update makefile
*  bench/spin-decomp/README: update readme
*  bench/spin-decomp/allbenchs.txt: sumup
*  bench/spin-decomp/construct_bench.sh: construct bench
*  bench/spin-decomp/models/anderson.4.pm: model
*  bench/spin-decomp/models/at.4.pm: model
*  bench/spin-decomp/models/bakery.4.pm: model
*  bench/spin-decomp/models/bopdp.3.pm: model
*  bench/spin-decomp/models/elevator.4.pm: model
*  bench/spin-decomp/models/elevator2.3.pm: model
*  bench/spin-decomp/models/gear.2.pm: model
*  bench/spin-decomp/models/production_cell.3.pm: model
*  bench/spin-decomp/models/sorter.2.pm: model
*  bench/spin-decomp/models/telephony.2.pm: model
*  bench/spin-decomp/spin_bench.sh: setup bench

--- a/README
+++ b/README
@@ -186,6 +186,7 @@ doc/              Documentation for libspot.
 bench/            Benchmarks for ...
    emptchk/       ... emptiness-check algorithms,
    dynchk/        ... dynamic emptiness-check algorithms,
+   spin-decomp/   ... launch bench for decomp using spin and POR
    ltl2tgba/      ... LTL-to-Büchi translation algorithms,
    ltlcounter/    ... translation of a class of LTL formulae,
    ltlclasses/    ... translation of more classes of LTL formulae,
@@ -198,6 +199,7 @@ wrap/             Wrappers for other languages.
       ajax/       LTL-to-TGBA translator with web interface, using Ajax.
 iface/            Interfaces to other libraries.
    dve2/          Interface with DiVinE2.
+   tlcheck/	  model checker in progress
    gspn/          GreatSPN interface.
       examples/   Supporting models used by the test cases.
 
