--- a/README
+++ b/README
@@ -177,6 +177,9 @@ src/              Sources for libspot.
    tgbaparse/     Parser for explicit TGBA.
    ta/            TA objects and cousins (TGTA).
    taalgos/       Algorithms on TA/TGTA.
+   fasttgba/      FASTTGBA objects and cousins.
+   fasttgbaalgos/ Algorithms on FASTTGBA.
+   fasttgbatest/  Tests for fasttgba/, fasttgbaalgos/
    tgbatest/      Tests for tgba/, tgbaalgos/, tgbaparse/, ta/ and taalgos/.
    saba/          SABA (State-labeled Alternating Büchi Automata) objects.
    sabaalgos/     Algorithms on SABA.
