Finalize support for Dve without buddy
This commit finalize the support for dve without using
Buddy. To do this, the LTL translation still use Buddy
but the resulting automaton is the converted into a
structure which is buddy free

* README: Document all new files
* iface/dve2fasttgba/dve2.cc: the DVE loader
* src/fasttgba/acc_dict.cc: the dict. for acceptance set
* src/fasttgba/acc_dict.hh: the dict. for acceptance set
* src/fasttgba/ap_dict.cc: the dict. for atomic prop.
* src/fasttgba/ap_dict.hh: the dict. for atomic prop.
* src/fasttgba/cube.cc:	   respresent a cube, i.e. a conjunction of ap
* src/fasttgba/cube.hh: respresent a cube, i.e. a conjunction of ap
* src/fasttgba/fasttgba.hh: the new TGBA
* src/fasttgba/fasttgba_product.cc: the new product
* src/fasttgba/fasttgba_state.hh: the new representation of a state
* src/fasttgba/fasttgba_succ_iterator.hh: the new iterator
* src/fasttgba/markset.cc: an acceptance mark
* src/fasttgba/markset.hh: an acceptance mark
* src/fasttgbaalgos/lbtt_dfs.cc: a lbtt printer
* src/fasttgbaalgos/lbtt_dfs.hh: a lbtt printer

--- a/README
+++ b/README
@@ -206,6 +206,7 @@ wrap/             Wrappers for other languages.
       ajax/       LTL-to-TGBA translator with web interface, using Ajax.
 iface/            Interfaces to other libraries.
    dve2/          Interface with DiVinE2.
+   dve2fasttgba/  Interface with DiVinE2 using fasttgba
    gspn/          GreatSPN interface.
       examples/   Supporting models used by the test cases.
 
