Implement cou99 for fasttgba
All emptiness check algorithms are implemented in
a dfedicated directory

* README: add new directory
* configure.ac: add new directory
* src/fasttgba/acc_dict.cc: sanity
* src/fasttgba/markset.cc: sanity
* src/fasttgba/markset.hh: documentation
* src/fasttgbaalgos/Makefile.am: add new subdir
* src/fasttgbaalgos/ec/Makefile.am: Makefile for e.c.
* src/fasttgbaalgos/ec/cou99.cc: the implem for cou99
* src/fasttgbaalgos/ec/cou99.hh: the cou99 header
* src/fasttgbaalgos/ec/ec.hh: interface for emptiness check
* src/fasttgbaalgos/tgba2fasttgba.cc: cleanup
* src/fasttgbatest/.gitignore: add ignoring files
* src/fasttgbatest/Makefile.am: add new file
* src/fasttgbatest/checker.cc: to test emptiness check

--- a/README
+++ b/README
@@ -179,6 +179,7 @@ src/              Sources for libspot.
    taalgos/       Algorithms on TA/TGTA.
    fasttgba/      FASTTGBA objects and cousins.
    fasttgbaalgos/ Algorithms on FASTTGBA.
+      ec/	  Emptiness check for FASTTGBA
    fasttgbatest/  Tests for fasttgba/, fasttgbaalgos/
    tgbatest/      Tests for tgba/, tgbaalgos/, tgbaparse/, ta/ and taalgos/.
    saba/          SABA (State-labeled Alternating Büchi Automata) objects.
