Sanity Check + fix leaks
* src/fasttgbaalgos/ec/lowlink_stack.hh: Fix delete empty_.
* src/fasttgbaalgos/ec/root_stack.hh: Fix delete empty_.
* src/fasttgbaalgos/ec/union_find.cc: Delete deadstore.
* src/fasttgbaalgos/ec/union_find.hh: Override destructor.
* src/fasttgbatest/checker.cc: Delete ap.
* README: Add directories.
* iface/dve2fasttgba/dve2.cc: Sanity.
* iface/dve2fasttgba/dve2check.cc: Sanity.
* src/fasttgba/fasttgba_product.hh: Sanity.
* src/fasttgba/fasttgba_succ_iterator.hh: Remove ingroup.
* src/fasttgbaalgos/ec/cou99_scc.cc: Sanity.
* src/fasttgbaalgos/ec/cou99_uf_shared.cc: Sanity.
* src/fasttgbaalgos/ec/cou99check.cc: Sanity.
* src/fasttgbaalgos/ec/dijkstra_scc.cc: Sanity.
* src/fasttgbaalgos/ec/dijkstracheck.cc: Sanity.
* src/fasttgbaalgos/ec/gv04.cc: Sanity.
* src/fasttgbaalgos/ec/lazycheck.cc: Sanity.
* src/fasttgbaalgos/ec/opt/opt_dijkstra_scc.cc: Sanity.
* src/fasttgbaalgos/ec/opt/opt_dijkstra_scc.hh: Sanity.
* src/fasttgbaalgos/ec/opt/opt_tarjan_scc.cc: Sanity.
* src/fasttgbaalgos/ec/stats.cc: Sanity.
* src/fasttgbaalgos/ec/tarjan_scc.cc: Sanity.
* src/fasttgbaalgos/ec/union_scc.cc: Sanity.
* src/fasttgbaalgos/ec/unioncheck.cc: Sanity.
* src/fasttgbatest/checker.cc: Sanity.

--- a/README
+++ b/README
@@ -180,6 +180,7 @@ src/              Sources for libspot.
    fasttgba/      FASTTGBA objects and cousins.
    fasttgbaalgos/ Algorithms on FASTTGBA.
       ec/	  Emptiness check for FASTTGBA
+         opt/	  Optimized Emptiness check for FASTTGBA
    fasttgbatest/  Tests for fasttgba/, fasttgbaalgos/
    tgbatest/      Tests for tgba/, tgbaalgos/, tgbaparse/, ta/ and taalgos/.
    saba/          SABA (State-labeled Alternating Büchi Automata) objects.
