Add benchmarks for n-ary product of twa automata
* bench/product_n/README: Add the instructions to run the benchmarks
* README: Add product_n benchmarks
* bench/product_n/product_bench.py: New file, time the products.
* bench/product_n/run.in: New file, generate the script to run.
* bench/product_n/Makefile.am: Add product_n/{run.in|product_bench.py}
* bench/Makefile.am: Add the subdir bench/product_n.
* configure.ac: Add the rule to generate run from bench/product/run.in,
and bench/product_n/Makefile

--- a/README
+++ b/README
@@ -166,6 +166,7 @@ bench/            Benchmarks for ...
    ltl2tgba/      ... LTL-to-Büchi translation algorithms,
    ltlcounter/    ... translation of a class of LTL formulas,
    ltlclasses/    ... translation of more classes of LTL formulas,
+   product_n/     ... n-ary product of twa automata
    spin13/        ... compositional suspension and other improvements,
    stutter/       ... stutter-invariance checking algorithms,
    wdba/          ... WDBA minimization (for obligation properties).
