--- a/README
+++ b/README
@@ -166,6 +166,7 @@ bench/            Benchmarks for ...
    ltl2tgba/      ... LTL-to-Büchi translation algorithms,
    ltlcounter/    ... translation of a class of LTL formulas,
    ltlclasses/    ... translation of more classes of LTL formulas,
+   parity_prod/   ... product of parity automata,
    spin13/        ... compositional suspension and other improvements,
    stutter/       ... stutter-invariance checking algorithms,
    wdba/          ... WDBA minimization (for obligation properties).
